2008-12-12  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/typer.cpp: Fix for PR#2017902 -- bug introduced by r2578 in
	detecting guanidinium C atoms.

 	* data/element.txt, data/atomtyp.txt: Minor changes. Allow boron
	to have 4 bonds and adjust implicit valence for several elements.

2008-12-02  Chris Morley

	* src/tokenst.cpp, include/openbabel/tokenst.h: Add function
	to ignore istream up to a specified string.
	
	* src/formats/mdlformat.cppReadMolecule): give no warning if
	there are blank lines at the end of the file.
	(SkipObjects): rewrite to prevent confusion by $ chars in
	properties. Should hve been done long ago.

	* src/mcdlutil.cpp, include/openbabel/mcdlutil.h:  more bug
	fixes from Sergey Trepalin. Performs better, but still some
	memory leaks.
	
2008-12-01  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/formats/pdbformat.cpp: Add support for reading CRYST1
	records, contributed by Francois-Xavier Coudert. PR#2343128.

2008-11-22  Chris Morley

	* src/mcdlutil.cpp: Small bug fixes from Sergei Trepalin
	
	* windows-vc2005/babelconfig.h, windows-vc2005/OBDLL/OBDLL.vcproj,
	windows-vc2005/OBMCDL/MCDL.vcproj, 
	windows-vc2005/OBUtilFormats/OBUtilFormats.vcproj: Windows
	build updated to make groupRedraw() callable.

2008-11-22  Chris Morley

	* src/ops/loader.cpp: do not remove comments after 4th line of
	an entry in plugindefines.tx. SMARTS uses '#'!
	
	* src/ops/optransform.cpp: revamp parsing.
	
	* src/phmodel.cpp(OBChemTsfm::Init): correct bug in which some
	kinds of transform were not taken into account when checking
	whether there was anything to do.

2008-11-22  Chris Morley

	* include/openbabel/text.h: NEW boring and trivial class OBText,
	derived from OBBase. This was proposed last year for formats
	which contained mixed content, like cdx, but has other uses. 

	* src/formats/xml/textformat.cpp: NEW input format for the above
	
	* src/formats/xml/cmlreactformat.cpp: makes use of OBText class