@@ -1,3 +1,10 @@
+2008-12-13  Geoffrey Hutchison  <babel@geoffhutchison.net>
+
+	* src/formats/outformat.cpp: New format to read files with
+	extensions .dat, .log, .out and try to guess the format based on
+	contents. Currently works with many GAMESS, Gaussian, MOPAC,
+	Q-Chem, Jaguar, and MPQC files.
+
 2008-12-12  Geoffrey Hutchison  <babel@geoffhutchison.net>
 
 	* src/typer.cpp: Fix for PR#2017902 -- bug introduced by r2578 in
